Fix alignment

--- a/src/sass/static/mb_trade.scss
+++ b/src/sass/static/mb_trade.scss
@@ -226,7 +226,7 @@
             padding: 0;
         }
         .gr-adapt {
-            padding: 0 0 0 15px;
+            padding: 0 0 0 10px;
         }
     }
     .spot div {
@@ -241,7 +241,6 @@
         border-radius: 3px;
         white-space: nowrap;
         line-height: 22px;
-        margin-right: 5px;
         &.alert {
             background: rgba(251, 228, 215, 0.7);
             padding-right: 5px;
